--- a/kibana.yaml
+++ b/kibana.yaml
@@ -31,13 +31,14 @@ spec:
       containers:
         - name: kibana
           image: kibana:8.1.3
-          resources:
+          resources: # 資源限制
             limits:
               cpu: 1000m
             requests:
               cpu: 100m
           env:
-            - name: ELASTICSEARCH_URL
+            - name: ELASTICSEARCH_URL # 在環境變數中使用 ELASTICSEARCH_URL 設定
+            # Elasticsearch 的叢集以及 Port
               value: http://elasticsearch:9200
           ports:
             - containerPort: 5601
